# plugins

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  build.zig  build.zig.zon  justfile
.github/workflows/: publish.yml  validate.yml
aicreds/: aplugin.json
aicreds/src/: main.zig
archive/: CMakeLists.txt  README.md  aplugin.json  plugin.json
archive/src/: wrapper.cpp
barcode/: CMakeLists.txt  README.md  aplugin.json
barcode/src/: wrapper.cpp
crypto/: README.md  aplugin.json  plugin.json
crypto/src/: wrapper.zig
highlight/: Cargo.toml  README.md  aplugin.json
highlight/.cargo-cc/: zig-wasi-cc
highlight/src/: lib.rs
image/: CMakeLists.txt  README.md  aplugin.json
image/src/: wrapper.cpp
markdown/: Cargo.toml  README.md  aplugin.json
markdown/src/: lib.rs
scripts/: fetch-deps.sh
sdk/: README.md  plugin.schema.json
sdk/c/: CMakeLists.txt  aglet_plugin.h
sdk/rust/: Cargo.toml
sdk/rust/src/: lib.rs
sdk/templates/: README.md
sdk/templates/cpp/: CMakeLists.txt  plugin.json
sdk/templates/cpp/src/: wrapper.cpp
sdk/templates/zig/: plugin.json
sdk/templates/zig/src/: wrapper.zig
sdk/zig/: plugin.zig
sysmon/: aplugin.json  plugin.json
sysmon/src/: main.zig
tokstat/: aplugin.json  plugin.json
tokstat/src/: main.zig
xml/: Cargo.toml  README.md  aplugin.json
xml/src/: lib.rs
