[package]
name = "highlight"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Syntax highlighting wasm plugin (tree-sitter)"

[lib]
crate-type = ["cdylib"]

[dependencies]
aglet_plugin_sdk = { path = "../sdk/rust" }
serde_json = "1"
tree-sitter = "0.25"
tree-sitter-highlight = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-json = "0.24"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-bash = "0.23"
tree-sitter-c = "0.23"
tree-sitter-go = "0.23"

[profile.release]
opt-level = "z"
lto = true
panic = "abort"
strip = true
codegen-units = 1
