[package]
name = "markdown"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Markdown → Aglet IR node tree (comrak)"

[lib]
crate-type = ["cdylib"]

[dependencies]
aglet_plugin_sdk = { path = "../sdk/rust" }
serde_json = "1"
# default-features=false：去掉 syntect 高亮特性（高亮交给 aglet 的 highlight 插件 +
# CodeBlock 节点）。只要纯 Rust 的 CommonMark+GFM parser。
comrak = { version = "0.39", default-features = false }

[profile.release]
opt-level = "z"
lto = true
panic = "abort"
strip = true
codegen-units = 1
