[package]
name = "xml"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "XML/RSS/Atom parsing wasm plugin"

[lib]
crate-type = ["cdylib"]

[dependencies]
aglet_plugin_sdk = { path = "../sdk/rust" }
quick-xml = "0.41.0"
serde_json = "1.0.150"

[profile.release]
opt-level = "z"
lto = true
panic = "abort"
strip = true
codegen-units = 1
